@@ -62,6 +62,12 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.mkpaz</groupId>
+            <artifactId>atlantafx-base</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!-- Apache POI -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -171,6 +177,11 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>Launcher</mainClass> <!-- Tu tiež plný názov launcher triedy -->
+                    <options>
+                        <option>--add-opens=java.base/sun.misc=ALL-UNNAMED</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
